posiGen_FullsendBox/src/objects/Exception_Threshold__c.object
<CustomObject>
    <fields>
        <fullName>Business_Installation_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Installation Step</label>
        <referenceTo>Business_Installation_Step__c</referenceTo>
        <relationshipLabel>Exception Thresholds</relationshipLabel>
        <relationshipName>Exception_Thresholds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>In_Process_Threshold__c</fullName>
        <label>In Process Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Review_Threshold__c</fullName>
        <label>PM Review Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Exception Threshold</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Installation_Step__c</columns>
        <columns>In_Process_Threshold__c</columns>
        <columns>PM_Review_Threshold__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Exception Threshold Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exception Thresholds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>